--- a/locations.html
+++ b/locations.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Milk & Froth</title>
+  <title>Locations - Milk & Froth</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -17,10 +17,13 @@
       </ul>
     </nav>
   </header>
-  <main class="hero">
-    <h1>Welcome to Milk & Froth</h1>
-    <p>Experience plant-based frozen treats crafted with love in Detroit.</p>
-    <a href="flavors.html" class="btn">Explore Flavors</a>
+  <main class="content">
+    <h2>Visit Our Scoop Shops</h2>
+    <div class="location">
+      <h3>Campus Martius</h3>
+      <p>123 Detroit Ave, Detroit, MI</p>
+    </div>
+    <a href="flavors.html" class="btn">Today's Flavors</a>
   </main>
   <footer>
     <p>&copy; 2025 Milk & Froth. All rights reserved.</p>
