--- a/locations.html
+++ b/locations.html
@@ -6,6 +6,11 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
+  <audio autoplay loop>
+    <source src="background-music.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+  </audio>
+  <div class="background"></div>
   <header>
     <nav class="navbar">
       <a href="index.html" class="logo">Milk & Froth</a>
@@ -22,6 +27,14 @@
     <div class="location">
       <h3>Campus Martius</h3>
       <p>123 Detroit Ave, Detroit, MI</p>
+    </div>
+    <div class="location">
+      <h3>Midtown</h3>
+      <p>456 Cass Ave, Detroit, MI</p>
+    </div>
+    <div class="location">
+      <h3>Eastern Market</h3>
+      <p>789 Market St, Detroit, MI</p>
     </div>
     <a href="flavors.html" class="btn">Today's Flavors</a>
   </main>
