--- a/flavors.html
+++ b/flavors.html
@@ -20,7 +20,7 @@
 
   <main class="content">
     <h2>Our Flavors</h2>
-    <div class="flavor-grid">
+    <div class="flavor-gallery">
       <div class="flavor-card">
         <h3>Salted Caramel</h3>
         <p>Sweet caramel swirled with sea salt for the perfect balance.</p>
@@ -36,6 +36,22 @@
       <div class="flavor-card">
         <h3>Matcha Green Tea</h3>
         <p>Earthy and bold, with a refreshing finish.</p>
+      </div>
+      <div class="flavor-card">
+        <img src="images/honeycomb.jpg" alt="Honeycomb Ice Cream" />
+        <h3>Honeycomb</h3>
+      </div>
+      <div class="flavor-card">
+        <img src="images/nutella.jpg" alt="Nutella Ice Cream" />
+        <h3>Nutella</h3>
+      </div>
+      <div class="flavor-card">
+        <img src="images/cereal-milk.jpg" alt="Cereal and Milk Ice Cream" />
+        <h3>Cereal & Milk</h3>
+      </div>
+      <div class="flavor-card">
+        <img src="images/hazelnut.jpg" alt="Hazelnut Ice Cream" />
+        <h3>Hazelnut</h3>
       </div>
     </div>
   </main>
