--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
+  <audio autoplay loop>
+    <source src="background-music.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+  </audio>
+  <div class="background"></div>
   <header>
     <nav class="navbar">
       <a href="index.html" class="logo">Milk & Froth</a>
