--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </header>
   <main class="hero">
     <h1>Welcome to Milk & Froth</h1>
-    <p>Experience plant-based frozen treats crafted with love in Detroit.</p>
+    <p style="color: palevioletred">Experience plant-based frozen treats crafted with love in Detroit.</p>
     <a href="flavors.html" class="btn">Explore Flavors</a>
   </main>
   <footer>
