--- a/about.html
+++ b/about.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -22,11 +23,64 @@
       </ul>
     </nav>
   </header>
+
   <main class="content">
-    <h2>Our Story</h2>
-    <p>Founded in Detroit, Milk & Froth is redefining frozen desserts with delicious plant-based options. We value quality, creativity, and community in every scoop.</p>
-    <a href="flavors.html" class="btn">Try Our Flavors</a>
+    <section class="about-intro">
+      <h2>About Milk & Froth</h2>
+      <p>
+        Detroit-born and flavor-obsessed, Milk & Froth is where classic meets craft. We make exceptional dairy and vegan ice cream from scratch, in small batches, using nothing but the finest ingredients—no artificial flavors, no chemical stabilizers, just pure, unfiltered indulgence.
+      </p>
+      <p>
+        For the past seven years, we’ve been deep in the world of ice cream, learning from industry experts and perfecting our craft. We don’t just make ice cream—we live it. Since launching in 2018, our mission has been simple: create ridiculously good ice cream that people feel great about eating.
+      </p>
+      <p>
+        Every scoop is handcrafted in our Eastern Market kitchen, free from pre-made mixes and packed with bold, unforgettable flavors. Through endless experimentation and an obsession with quality, we’re proud to serve what we believe is some of the best ice cream in the country—and we’re just getting started.
+      </p>
+    </section>
+
+    <section class="process">
+      <h2>Our Ice Cream-Making Process</h2>
+
+      <div class="process-step">
+        <h3>1. Start with Real Ingredients</h3>
+        <p>
+          No industrial pre-made bases here. We source whole, high-quality ingredients—like fresh dairy, pure vanilla beans, real fruit, and premium chocolate—to build every recipe from the ground up. Each flavor starts with its own custom formula, ensuring the perfect balance of creaminess and taste.
+        </p>
+        <ul>
+          <li>No artificial flavors or colors</li>
+          <li>No chemical stabilizers or preservatives</li>
+          <li>Dairy & vegan recipes crafted with precision</li>
+        </ul>
+      </div>
+
+      <div class="process-step">
+        <h3>2. Pasteurization – The Flavor Locks In</h3>
+        <p>
+          Unlike most ice cream shops, we pasteurize our own ice cream in-house, creating each batch with a recipe designed specifically for that flavor. By heating and blending our ingredients together, we enhance the natural flavors and create a smooth, luxurious texture.
+        </p>
+        <ul>
+          <li >Each flavor is uniquely crafted—not just a flavored base</li>
+          <li>We control every ingredient, ensuring the highest quality</li>
+          <li>A difference you can taste in every scoop</li>
+        </ul>
+      </div>
+
+      <div class="process-step">
+        <h3>3. Churn, Freeze, and Serve ❄️</h3>
+        <p>
+          Once our perfected ice cream mix is cooled and aged, we churn it at the optimal speed to create a texture that’s rich, dense, and ultra-creamy. After a quick deep freeze, our small-batch ice cream is ready to scoop.
+        </p>
+        <ul>
+          <li>A texture that’s smooth and decadent</li>
+          <li>Bold, natural flavors that shine through</li>
+          <li>Ice cream made with love, not shortcuts</li>
+        </ul>
+      </div>
+    </section>
+
+    <a href="flavors.html" class="btn">Explore Our Flavors</a>
   </main>
+
   <footer>
     <p>&copy; 2025 Milk & Froth. All rights reserved.</p>
   </footer>
