--- a/flavors.html
+++ b/flavors.html
@@ -13,6 +13,7 @@
       <ul class="nav-links">
         <li><a href="about.html">About</a></li>
         <li><a href="locations.html">Scoop Shops</a></li>
+        <li><a href="flavors.html">Flavors</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
@@ -22,36 +23,44 @@
     <h2>Our Flavors</h2>
     <div class="flavor-gallery">
       <div class="flavor-card">
+        <img src="images/caramel.png" alt="Salted Caramel Ice Cream" />
         <h3>Salted Caramel</h3>
         <p>Sweet caramel swirled with sea salt for the perfect balance.</p>
       </div>
       <div class="flavor-card">
+        <img src="images/chocolate.png" alt="Vegan Chocolate Ice Cream" />
         <h3>Vegan Chocolate</h3>
         <p>Rich, dairy-free dark chocolate made with oat milk.</p>
       </div>
       <div class="flavor-card">
+        <img src="images/lavender.png" alt="Honey Lavender Ice Cream" />
         <h3>Honey Lavender</h3>
         <p>A floral twist on a sweet and smooth classic.</p>
       </div>
       <div class="flavor-card">
+        <img src="images/matcha.png" alt="Matcha Green Tea Ice Cream" />
         <h3>Matcha Green Tea</h3>
         <p>Earthy and bold, with a refreshing finish.</p>
       </div>
       <div class="flavor-card">
-        <img src="images/honeycomb.jpg" alt="Honeycomb Ice Cream" />
+        <img src="images/honeycomb.png" alt="Honeycomb Ice Cream" />
         <h3>Honeycomb</h3>
+        <p>Honey flavored with honey crisps.</p>
       </div>
       <div class="flavor-card">
-        <img src="images/nutella.jpg" alt="Nutella Ice Cream" />
+        <img src="images/nutella.png" alt="Nutella Ice Cream" />
         <h3>Nutella</h3>
+        <p>Chocolate spread mixed into ice cream.</p>
       </div>
       <div class="flavor-card">
-        <img src="images/cereal-milk.jpg" alt="Cereal and Milk Ice Cream" />
+        <img src="images/cereal.png" alt="Cereal and Milk Ice Cream" />
         <h3>Cereal & Milk</h3>
+        <p>Fruit pebbles cereal and milk.</p>
       </div>
       <div class="flavor-card">
-        <img src="images/hazelnut.jpg" alt="Hazelnut Ice Cream" />
+        <img src="images/hazelnut.png" alt="Hazelnut Ice Cream" />
         <h3>Hazelnut</h3>
+        <p>Hazelnut spread and hazelnut pieces.</p>
       </div>
     </div>
   </main>
