--- a/locations.html
+++ b/locations.html
@@ -24,20 +24,24 @@
   </header>
   <main class="content">
     <h2>Visit Our Scoop Shops</h2>
-    <div class="location">
-      <h3>Campus Martius</h3>
-      <p>123 Detroit Ave, Detroit, MI</p>
-    </div>
-    <div class="location">
-      <h3>Midtown</h3>
-      <p>456 Cass Ave, Detroit, MI</p>
-    </div>
-    <div class="location">
-      <h3>Eastern Market</h3>
-      <p>789 Market St, Detroit, MI</p>
+    <div id="locations-container">
+      <div class="location" id="campus">
+        <h3>Campus Martius</h3>
+        <p>123 Detroit Ave, Detroit, MI</p>
+      </div>
+      <div class="location" id="midtown">
+        <h3>Ann Arbor</h3>
+        <p>328 S Main St, Ann Arbor, MI</p>
+      </div>
+      <div class="location" id="market">
+        <h3>Eastern Market</h3>
+        <p>789 Market St, Detroit, MI</p>
+      </div>
     </div>
     <a href="flavors.html" class="btn">Today's Flavors</a>
   </main>
+  
+  <script src="locations.js"></script>
   <footer>
     <p>&copy; 2025 Milk & Froth. All rights reserved.</p>
   </footer>
