--- a/index.html
+++ b/index.html
@@ -1,16 +1,21 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Milk & Froth</title>
   <link rel="stylesheet" href="styles.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
   <audio autoplay loop>
     <source src="background-music.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
   </audio>
+
   <div class="background"></div>
+  <div class="overlay"></div>
+
   <header>
     <nav class="navbar">
       <a href="index.html" class="logo">Milk & Froth</a>
@@ -22,11 +27,18 @@
       </ul>
     </nav>
   </header>
+
   <main class="hero">
     <h1>Welcome to Milk & Froth</h1>
-    <p style="color: palevioletred">Experience plant-based frozen treats crafted with love in Detroit.</p>
+    <p>Experience plant-based frozen treats crafted with love in Detroit.</p>
     <a href="flavors.html" class="btn">Explore Flavors</a>
   </main>
+
+  <section class="content">
+    <h2>Why You'll Love Us</h2>
+    <p>Our ice cream is made from scratch using only the highest-quality ingredients. No artificial stuff, ever. Just creamy, dreamy perfection in every scoop.</p>
+  </section>
+
   <footer>
     <p>&copy; 2025 Milk & Froth. All rights reserved.</p>
   </footer>
